# KaoLang

./: .gitignore  CMakeLists.txt  README.md  build.sh
docs/: index.html  index.js  kaolang.js  kaolang.wasm  style.css
sample/: all_commands.kao  increment_by_one.kao
src/: Tape.h  main.cpp
src/interpreter/: Command.h  Interpreter.cpp  Interpreter.h  Tape.cpp  Tape.h
src/parser/: Parser.cpp  Parser.h
src/utf/: utf_utils.cpp  utf_utils.h
